1.3.10:
-------

- Added security header feature


1.3.9:
------

- Added a separator to searching for attachment names
- [BUGFIX] Render multiple mail parts in mail view instead of only the last part
- Use TLS v1.2 with openssl 1.0.x for connecting remote pop3/imap servers
- Instant search results to the gui when the search page loads
- Support sphinx-3.3.1, introduced sphinx strict mode variable
- GUI domain fixes
- gcc 9 fixes
- Fix permission on sphinx data dir to 700
- pilerpurge.py should honor the mysqlhost value
- Password change enabled by default
- Health page fixes
- GUI mime parser fixes
- Start/stop script fix
- Optimized search page for mobile devices, set $config['ENABLE_MOBILE_PREVIEW'] = 1; in config-site.php to enable it


1.3.0:
-----

- Switched from utf8 to utf8mb4 encoding.

- Switched from preforking model to epoll

- Removed PDF support

- GUI fixes

- Added HTML purifier support

- Rewritten pilerpurge in Python

1.2.0:
------

Heavy SQL scheme changes throughout the development of 1.2.0!

2016.10.06.

Removed deb and rpm packaging metadata.

2016.09.21.

Improved logging for the GUI. See the new config option: $config['LOG_LEVEL'] = NORMAL;

2016.09.18.

Moved all piler configuration from ${sysconfdir} to ${sysconfdir}/piler, eg.

root@01b74b787c26:/# ls -la /usr/local/etc/piler/
total 36
drwxr-xr-x 1 root root    24 Oct  6 20:49 .
drwxr-xr-x 1 root root    74 Oct  6 20:49 ..
-rw-r--r-- 4 root root  1008 Oct  6 20:39 piler.conf
-rw-r----- 5 root piler 1066 Oct  6 20:39 piler.conf.dist
-rw-r----- 5 root piler   56 Oct  6 20:40 piler.key
-rw------- 5 root root  5256 Oct  6 20:40 piler.pem
-rw-r--r-- 1 root root  6270 Oct  6 20:49 sphinx.conf
-rw-r--r-- 5 root piler 6299 Oct  6 20:39 sphinx.conf.dist

Make sure to update the piler shipped shell scripts
(rc.searchd, indexer.*.sh, ...) as well!

2016.08.31.

Added chunking / BDAT support for the piler daemon.
You may turn it on by setting enable_chunking=1 in piler.conf

2016.06.19.
