@@ -230,3 +230,13 @@ mmap_dedup_test=0
 ; mechanism against unwanted email in the archive if limiting smtp
 ; clients via an IP-address list is not feasible.
 security_header=
+
+; whether to enable (1) or not (0) an smtp access list similar to
+; postfix's postscreen. If so, then create a text file %sysconfdir%/piler/smtp.acl
+; An example for /usr/local/etc/piler/smtp.acl:
+;
+; 1.2.3.4/32 permit
+; 10.0.1.0/24 reject
+; 172.16.0.0/16 permit
+;
+smtp_access_list=0
