@@ -26,8 +26,6 @@
 #undef HAVE_TNEF
 #undef HAVE_ZIP
 
-#undef HAVE_LIBWRAP
-
 #undef HAVE_TWEAK_SENT_TIME
 
 #undef HAVE_SUPPORT_FOR_COMPAT_STORAGE_LAYOUT
