@@ -2,6 +2,7 @@
 -------
 
 - Added security header feature
+- Introduced the smtp acl list, and obsoleted the tcp_wrappers check
 
 
 1.3.9:
